Update ClientQueryCacheMemoryLeakTest.java